# File and Version Information:
#  $Id: ChangeLog 8463 2014-06-24 01:53:04Z cpo@SLAC.STANFORD.EDU $
#
# Description:
#  ChangeLog file for package xtcav
#------------------------------------------------------------------------

Package author: Alvaro Sanchez-Gonzalez

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-17
2016-02-19 Christopher O'Grady
Suppress divide-by-zero warnings in Utils.py.
Also this comment from Alvaro:
-Small typo in comment, and small error in the autothreshold algorithm, which probably did not have any consequences, except for making it a bit slower, but that could have them in certain scenarios.

Tag: V00-00-16
2016-02-19 Christopher O'Grady
Add workaround for problem that returned incorrect epics information
on shots where XTCAV was not recorded.  This happened because we
are using indexing-mode, and xtcav is not recording epics data on
shots where the camera is not recorded, coupled with the incorrect
idea of a global "Env" where epics information is stored (vs.
stored "per-shot").  The workaround is to check for an xtcav image
before trying to access the epics variables when analyzing lasing-off.

Tag: V00-00-15
2016-02-19 Christopher O'Grady
Add timestamp of one of the lasing-off shots into the lasing-off constants, so that
shot can be viewed later by jumping to it.

From Alvaro Sanchez-Gonzalez	


-The full results structure now also returns the power obtained from the RMS and COM method without gas detector normalization.
-Greatly improved performance by optimizing some of the calculations performed for the autothreshold and the scipylabel algorithms. This was originally causing some jobs to swap memory too often making them really slow.

Tag: V00-00-14
2016-02-03 Christopher O'Grady
Fix crash when image was almost empty, so "physical units" PU['xfs']
in Utils.py only had len(1).  Now mark those images as failed.

From Alvaro Sanchez-Gonzalez	