@@ -70,6 +70,15 @@ class GenerateDarkBackground(object):
             times = run.times()
             for t in range(len(times)-1,-1,-1): #Starting from the back, to avoid waits in the cases where there are not xtcav images for the first shots
                 evt=run.event(times[t])
+                #ignore shots without xtcav, because we can get
+                #incorrect EPICS information (e.g. ROI).  this is
+                #a workaround for the fact that xtcav only records
+                #epics on shots where it has camera data, as well
+                #as an incorrect design in psana where epics information
+                #is not stored per-shot (it is in a more global object
+                #called "Env")
+                frame = evt.get(xtcav_type, xtcav_camera) 
+                if frame is None: continue
             
                 if not 'ROI_XTCAV' in locals():   #After the first event the epics store should contain the ROI of the xtcav images, that let us get the x and y vectors
                     ROI_XTCAV,ok=xtu.GetXTCAVImageROI(epicsStore)             
@@ -78,7 +87,6 @@ class GenerateDarkBackground(object):
                         continue
                     accumulator_xtcav=np.zeros(( ROI_XTCAV['yN'],ROI_XTCAV['xN']), dtype=np.float64)
                             
-                frame = evt.get(xtcav_type, xtcav_camera) 
                 if frame:                       #For each shot that contains an xtcav frame we retrieve it and add it to the accumulators
                     img=frame.data16().astype(np.float64)
                     
