@@ -11,6 +11,12 @@ Package author: Alvaro Sanchez-Gonzalez
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-18
+2016-03-17 Christopher O'Grady
+It appears the bug fix in V00-00-16 was only put in
+GenerateLasingOffReference.py.  I have also propagated
+it to GenerateDarkBackground.py
+
 Tag: V00-00-17
 2016-02-19 Christopher O'Grady
 Suppress divide-by-zero warnings in Utils.py.
